--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,44 @@ th {
 tr:nth-child(odd) {
   background-color: #b1e6f2;
 }
+
+h2 {
+  font-size: 15px;
+  color: grey;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+footer {
+  margin-left: 5px;
+  margin-bottom: 30px;
+}
+
+.related-1 {
+  background-image: url(../img/monitor.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 250px;
+  height: 200px;
+  margin: 10px 0 10px 0;
+}
+
+.related-2 {
+  background-image: url(../img/graph.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 250px;
+  height: 200px;
+
+  color: white;
+  margin: 10px 0 10px 0;
+}
+
+article > h2 {
+  color: white;
+  padding: 5px 0 0 10px;
+  font-size: 18px;
+  margin-top: 0;
+}
